feat: add Docker and deployment configs for Render and Vercel